# entropylab-docs-open

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
end_user/: Dockerfile  README.md  mkdocs.yml
end_user/docs/: getting_started.md  glossary.md  index.md
end_user/docs/entropy/: examples.md  getting_started.md  gui.md  project.md
end_user/docs/entropy-cli/: getting_started.md  gui.md  project.md
end_user/docs/entropyhub_and_flame/: index.md
end_user/docs/entropyhub_and_flame/contribute/: overview.md
end_user/docs/entropyhub_flame/: getting_started.md
end_user/docs/entropyhub_flame/management_record/: overview.md
end_user/docs/entropyhub_flame/nodeio/: overview.md
end_user/docs/entropyhub_flame/observability/: overview.md
end_user/docs/entropyhub_flame/workflow/: overview.md
end_user/docs/paramstore/: ParamStoreAPI.md  api.md  overview.md
end_user/docs/pipeline/: API.md  entropy_context.md  entropy_qua.md  getting_started.md  plotting.md
end_user/docs/quam/: config_builder.md  config_builder_api.md  overview.md  quam_api.md
end_user/docs/stylesheets/: extra.css
end_user/overrides/: home.html  main.html
end_user/site/: 404.html  index.html  sitemap.xml
end_user/site/entropyhub_flame/: index.html
end_user/site/entropyhub_flame/contribute/overview/: index.html
end_user/site/entropyhub_flame/getting_started/: index.html
end_user/site/paramstore/overview/: index.html
end_user/site/pipeline/getting_started/: index.html
end_user/site/quam/overview/: index.html
end_user/site/search/: search_index.json
(+4 files in other folders)
