[tool.poetry]
name = "entropylab-docs-open"
version = "0.1.0"
description = ""
authors = ["GalW <gal@quantum-machines.co>"]

[tool.poetry.dependencies]
python = ">=3.7.1, <3.10"
mkdocs = "1.3.0"
mkdocs-material = "8.2.14"
mkdocstrings = "^0.19.0"
mkdocstrings-python = "^0.7.0"
entropylab = "^0.9.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
